--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+storage:
+  upload-dir: uploads/images
+  allowed-mime-types:
+    - image/png
+    - image/jpeg
+  max-file-size: 1MB
