--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,10 @@ spring:
   application:
     name: RelaxMap-back
 
-#  Temporary url
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/postgres
+    username: ${DB_USER:postgres}
+    password: ${DB_PASSWORD:postgres}
 
   jpa:
     hibernate:
