add port to .env

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.example</groupId>
     <artifactId>RelaxMap-back</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <name>RelaxMap-back</name>
     <description>RelaxMap-back</description>
 
@@ -79,6 +79,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
         </dependency>
     </dependencies>
 
