--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,37 +3,46 @@ services:
   app:
     build: .
     restart: always
+    env_file:
+      - .env
 
     depends_on:
       - postgres
 
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/relaxmapdb
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/relaxmap_db
+      SPRING_DATASOURCE_USERNAME: ${DB_USER:-postgres}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD:-postgres}
 
     ports:
-      - '8080:8080'
+      - '${SPRING_PORT:-8080}:8080'
 
     networks:
       app:
 
   postgres:
-    image: postgres:latest
+    image: postgres:18
     restart: always
+    env_file:
+      - .env
 
     environment:
-      POSTGRES_DB: relaxmapdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: relaxmap_db
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
 
     ports:
-      - '5432:5432'
+      - '${DB_PORT:-5432}:5432'
 
-
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql
 
     networks:
       app:
+
+volumes:
+  postgres_data:
 
 networks:
   app:
