--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - .env
 
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/relaxmap_db
@@ -21,7 +22,7 @@ services:
       app:
 
   postgres:
-    image: postgres:18
+    image: postgres:18-alpine
     restart: always
     env_file:
       - .env
@@ -33,6 +34,12 @@ services:
 
     ports:
       - '${DB_PORT:-5432}:5432'
+
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
